--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: 8080
+  port: 8081
 spring:
   application:
     name: customer
   datasource:
     password: password
-    url: jdbc:postgresql://localhost:5433/customer
+    url: jdbc:postgresql://0.0.0.0:5433/customer
     username: amigoscode
   jpa:
     hibernate:
