--- a/fraud/src/main/resources/application.yml
+++ b/fraud/src/main/resources/application.yml
@@ -4,6 +4,8 @@ server:
 spring:
   application:
     name: fraud
+  zipkin:
+    base-url: http://localhost:9411
   datasource:
     password: password
     url: jdbc:postgresql://0.0.0.0:5433/fraud
